--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -337,9 +337,32 @@ stale_master_timeout = <%= @stale_master_timeout%>
 # Time in milliseconds which Graylog is waiting for all threads to stop on shutdown.
 shutdown_timeout = <%= @shutdown_timeout %>
 
+<% if @mongodb_hosts %>
 # MongoDB connection string
 # See http://docs.mongodb.org/manual/reference/connection-string/ for details
 mongodb_uri = mongodb://<% if @mongodb_useauth %><%= @mongodb_user %>:<%= @mongodb_password %>@<% end %><%= @mongodb_hosts %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %><% end %>
+<% else %>
+# MongoDB Configuration
+mongodb_useauth = <%= @mongodb_useauth %>
+<% if @mongodb_user %>
+mongodb_user = <%= @mongodb_user %>
+<% else %>
+#mongodb_user = grayloguser
+<% end %>
+<% if @mongodb_password %>
+mongodb_password = <%= @mongodb_password %>
+<% else %>
+#mongodb_password = 123
+<% end %>
+mongodb_host = <%= @mongodb_host %>
+<% if @mongodb_replica_set %>
+mongodb_replica_set = <%= @mongodb_replica_set.join(',') %>
+<% else %>
+#mongodb_replica_set = localhost:27017,localhost:27018,localhost:27019
+<% end %>
+mongodb_database = <%= @mongodb_database %>
+mongodb_port = <%= @mongodb_port %>
+<% end %>
 
 # Authenticate against the MongoDB server
 #mongodb_uri = mongodb://grayloguser:secret@localhost:27017/graylog2
