--- a/templates/web.sysconfig.erb
+++ b/templates/web.sysconfig.erb
@@ -8,10 +8,10 @@ GRAYLOG_WEB_HTTP_ADDRESS="<%= @http_address %>"
 GRAYLOG_WEB_HTTP_PORT="<%= @http_port %>"
 
 # Might be used to adjust the Java heap size. (i.e. "-Xms1024m -Xmx2048m")
-GRAYLOG_WEB_JAVA_OPTS=""
+GRAYLOG_WEB_JAVA_OPTS="<%= @java_opts %>"
 
 # Pass some extra args to graylog-web. (i.e. "-d" to enable debug mode)
-GRAYLOG_WEB_ARGS=""
+GRAYLOG_WEB_ARGS="<%= @extra_args %>"
 
 # Program that will be used to wrap the graylog-web command. Useful to
 # support programs like authbind.
