server: autoscale JVM heap options
rationale: the jvm settings for graylog server can be automatically
scaled based on the available memory. We set min & max heap to memory/2,
capping it at below 32G, to ensure the JVM will be able to use
-XX:+UseCompressedOops (see
https://www.elastic.co/guide/en/elasticsearch/guide/current/heap-sizing.html)
By default, PermSize and MaxPermSize is also set to the same value.
We leave the GC settings alone, since they are very sensible values for
Graylog2. However, we allow to provide additional java options, such as
-javaagent, or jmx options, which are useful for monitoring.

While we try hard to preserve backwards compatibility in the defaults
files, but this will cause restarts in *default* installations.

--- a/templates/server.default.erb
+++ b/templates/server.default.erb
@@ -3,8 +3,14 @@
 # Path to the java executable.
 JAVA=/usr/bin/java
 
+<%- if @java_opts.include? '-Xms' -%>
 # Default Java options for heap and garbage collection.
-GRAYLOG_SERVER_JAVA_OPTS="<%= @java_opts %>"
+GRAYLOG_SERVER_JAVA_OPTS="<%= @java_opts %><%= @java_opts_extra %>"
+<%- else -%>
+# Default Java options for heap and garbage collection.
+<%- jvm_memory="-Xms#{@max_heap} -Xmx#{@max_heap} -XX:NewRatio=1 -XX:PermSize=#{@perm_size} -XX:MaxPermSize=#{@perm_size}" -%>
+GRAYLOG_SERVER_JAVA_OPTS="<%= jvm_memory %> <%= @java_opts %><%= @java_opts_extra %>"
+<%- end -%>
 
 # Pass some extra args to graylog-server. (i.e. "-d" to enable debug mode)
 GRAYLOG_SERVER_ARGS="<%= @extra_args %>"
